--- a/help.html
+++ b/help.html
@@ -84,7 +84,8 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h2 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h2>
-                    <p>While printing a model there are a few errors which can occur while printing. The most common
+                    <p>
+                        While printing a model there are a few errors which can occur while printing. The most common
                         one
                         is the clogged nozzle. You can identify the error by hearing a loud clicking sound from the
                         printers nozzle.
@@ -118,7 +119,8 @@
                 </picture>
                 <article>
                     <h2 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h2>
-                    <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with
+                    <p>
+                        This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with
                         flipped normals. You can fix that easily by recalculating the normals in your modeling
                         software.
                     </p>
