--- a/materials.html
+++ b/materials.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
 </head>
+
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
@@ -30,24 +31,27 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
-                                aria-label="this link sends you to the home page">HOME</a>
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                                target="_self" aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                                rel="noopener" target="_self"
+                                aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                                rel="noopener" target="_self"
+                                aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                                rel="noopener" target="_self"
+                                aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                                target="_self" aria-label="this link sends you to the help page">HELP</a>
+                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                                rel="noopener" target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -84,7 +88,8 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
-                    <p>Materials in 3D printing are made of long strands of plastic (filament). They get pushed through
+                    <p>
+                        Materials in 3D printing are made of long strands of plastic (filament). They get pushed through
                         the heated nozzle of a 3d printer, where they are molten and reapplied to the print bed.
                         Filaments come in two sizes - 3mm and 1.75mm. Which one is used is mainly determined by the type
                         of printer at hand. Ultimaker devices for example use 3mm filament, while most other printers
@@ -121,18 +126,20 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
-                    <p>It depends. Some companies advertise their materials as safe for food and safe for toys. But this
-                        needs to be taken with a grain of salt, because the safe labels do not account forthe production
-                        process, which is 3d printing in this case. This study suggests that there are also toxic fumes
-                        produced while 3d printing. So if you can get a printer with a housing and an air filter around
-                        it, go ahead to safe on the safe side.</p>
+                    <p>
+                        It depends. Some companies advertise their materials as safe for food and safe for toys. But
+                        this needs to be taken with a grain of salt, because the safe labels do not account for the
+                        production process, which is 3d printing in this case. It produces fumes which may be harmful.
+                        So if you can get a printer with a housing and an air filter around
+                        it, go ahead to safe on the safe side.
+                    </p>
                 </article>
                 <article>
                     <h2 class="margin-bottom--s"><span>CAN</span> I make my own?</h2>
-                    <p>Yes definetly, there are existing community efforts to build small home extruders. But it isnt as
+                    <p>
+                        Yes definetly, there are existing community efforts to build small home extruders. But it isnt as
                         easy as you might think. So before you get your feet wet in that, try to run the numbers for
-                        bought
-                        filament vs self made filament.
+                        boughtfilament vs self made filament.
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
@@ -156,7 +163,9 @@
         <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
-                <p>An educational static website project</p>
+                <p>
+                    An educational static website project
+                </p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
