--- a/basics.html
+++ b/basics.html
@@ -84,18 +84,21 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h2 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h2>
-                    <p>3D printing is the process of creating real world objects made of plastics. While 3D printing is
+                    <p>
+                        3D printing is the process of creating real world objects made of plastics. While 3D printing is
                         the most commonly used term, there are other terms used in industrial engineering, which refer
                         to rapid prototyping or additive manufacturing. Also, there are different processing types too.
                         For now, we will focus on FDM (Fused Deposition Modeling) Printers.<br><br> The process works by
                         pushing a plastic filament through a heated nozzle in which it gets molten. The molten plastic
                         is then reapplied in layers to the printbed shaping the desired object. The most important parts
                         of a 3D printer are the printhead, which holds the hotend (nozzle and cooler) and the mechanics
-                        for transporting the filament (feeder), and the printbed.</p>
+                        for transporting the filament (feeder), and the printbed.
+                    </p>
                 </article>
                 <article>
                     <h2 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h2>
-                    <p>There are plenty of different types of 3D Printers on the market. They can be organized into
+                    <p>
+                        There are plenty of different types of 3D Printers on the market. They can be organized into
                         three categories: plug and play Printers, DIY Kits and RepRap (self built) Printers. The
                         machines used here can also be sorted in different categories: cartesic Printers and delta
                         Printers. While They do the same, the inner workings on the used coordinate system are
@@ -132,10 +135,12 @@
                 </article>
                 <article>
                     <h2 class="margin-bottom--s"><span>CAN</span> I build my own?</h2>
-                    <p>Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep
+                    <p>
+                        Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep
                         in mind, that building one from scratch can be much more expensive than just buying one. This
                         depends strongly on what you are planning to do with the machine. Below is a table which shows
-                        pros and contras of diy Printers versus buying a ready made one.</p>
+                        pros and contras of diy Printers versus buying a ready made one.
+                    </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
                     <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
