Fix social icons position

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <img class="footer-logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-end">
+            <div class="column-2 column-2-mobile flex flex-center-x-mobile flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram">
