--- a/basics.html
+++ b/basics.html
@@ -138,8 +138,7 @@
                     <p>
                         Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep
                         in mind, that building one from scratch can be much more expensive than just buying one. This
-                        depends strongly on what you are planning to do with the machine. Below is a table which shows
-                        pros and contras of diy Printers versus buying a ready made one.
+                        depends strongly on what you are planning to do with the machine.
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
