Delete typo from text

--- a/materials.html
+++ b/materials.html
@@ -106,7 +106,7 @@
                         temperatures of 45 degrees - otherwise they will get soft and deform quickly.<br><br> This is
                         where ABS comes into the picture. ABS is a industrial grade 3d printing material. Industrial
                         grade means it is widely adopted as a material used in industrial applications such as injection
-                        molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but/svg
+                        molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but
                         needs to be printed at about 250 degrees. On top of that ABS comes with a distinctive smell
                         which is definetly not for everyone.<br><br>PETG is like inbetween PLA and ABS, it doesnt smell
                         like ABS, but needs to printed at almost the same temperatures. On the other hand it prints very
@@ -139,7 +139,7 @@
                     <p>
                         Yes definetly, there are existing community efforts to build small home extruders. But it isnt as
                         easy as you might think. So before you get your feet wet in that, try to run the numbers for
-                        boughtfilament vs self made filament.
+                        bought filament vs self made filament.
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
