Fiy typo in text

--- a/models.html
+++ b/models.html
@@ -96,7 +96,7 @@
                     <h2 class="margin-bottom--s"><span>HOW </span>can I make them?</h2>
                     <p>
                         3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these
-                        type of programs nut fortunately it is not very steep, depending on what you need to do.
+                        type of programs but fortunately it is not very steep, depending on what you need to do.
                     </p>
                 </article>
                 <picture class="flex flex-center">
