Change pages links to relative

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            <a class="nav-item" href="index.html" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            <a class="nav-item" href="basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            <a class="nav-item" href="materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            <a class="nav-item" href="models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            <a class="nav-item" href="help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
@@ -64,7 +64,7 @@
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper margin-top--l">
-                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                        <a class="button text-white" href="basics.html"
                             aria-label="this links to the basics page" rel="noopener" target="_self">
                             GET STARTED!
                         </a>
