--- a/models.html
+++ b/models.html
@@ -31,23 +31,23 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            <a class="nav-item" href="index.html" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            <a class="nav-item" href="basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            <a class="nav-item" href="materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            <a class="nav-item" href="models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            <a class="nav-item" href="help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
@@ -120,11 +120,11 @@
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
                     <a class="page-button text-white"
-                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                        href="materials.html"
                         aria-label="this links to the materials page" rel="noopener" target="_self">
                         BACK
                     </a>
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                    <a class="page-button text-white" href="help.html"
                         aria-label="this links to the help page" rel="noopener" target="_self">
                         NEXT
                     </a>
