Change links to relative

--- a/basics.html
+++ b/basics.html
@@ -19,7 +19,7 @@
     <header class="headerbar flex flex-center">
         <div class="container flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
-                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                <a href="index.html"
                     aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
@@ -31,23 +31,23 @@
                 <nav>
                     <ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            <a class="nav-link" href="index.html" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            <a class="nav-link" href="basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            <a class="nav-link" href="materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            <a class="nav-link" href="models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            <a class="nav-link" href="help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
@@ -142,12 +142,12 @@
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
+                    <a class="page-button text-white" href="index.html"
                         aria-label="this links to the home page" rel="noopener" target="_self">
                         BACK
                     </a>
                     <a class="page-button text-white"
-                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                        href="materials.html"
                         aria-label="this links to the materials page" rel="noopener" target="_self">
                         NEXT
                     </a>
