--- a/materials.html
+++ b/materials.html
@@ -19,7 +19,7 @@
     <header class="headerbar flex flex-center">
         <div class="container container-mobile flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
-                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                <a href="index.html"
                     aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
@@ -31,26 +31,26 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                            <a class="nav-item" href="index.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                            <a class="nav-item" href="basics.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                            <a class="nav-item" href="materials.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                            <a class="nav-item" href="models.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                            <a class="nav-item" href="help.html"
                                 rel="noopener" target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
@@ -144,12 +144,12 @@
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
                     <a class="page-button text-white"
-                        href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                        href="basics.html"
                         aria-label="this links to the basics page" rel="noopener" target="_self">
                         BACK
                     </a>
                     <a class="page-button text-white"
-                        href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                        href="models.html"
                         aria-label="this links to the models page" rel="noopener" target="_self">
                         NEXT
                     </a>
