Change links to relative

--- a/response.html
+++ b/response.html
@@ -20,7 +20,7 @@
     <header class="headerbar flex flex-center">
         <div class="container container-mobile flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
-                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                <a href="index.html"
                     aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
