--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="headerbar flex flex-center">
         <div class="container flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
-                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                <a href="index.html"
                     aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever logo">
                 </a>
