Delete unused classes

--- a/basics.html
+++ b/basics.html
@@ -30,24 +30,24 @@
                 <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html" rel="noopener" target="_self"
+                        <li>
+                            <a href="index.html" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="basics.html" rel="noopener"
+                        <li>
+                            <a href="basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="materials.html" rel="noopener"
+                        <li>
+                            <a href="materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="models.html" rel="noopener"
+                        <li>
+                            <a href="models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="help.html" rel="noopener"
+                        <li>
+                            <a href="help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
