--- a/materials.html
+++ b/materials.html
@@ -31,26 +31,26 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="index.html" rel="noopener"
+                            <a href="index.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="basics.html"
+                            <a href="basics.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="materials.html"
+                            <a href="materials.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="models.html"
+                            <a href="models.html"
                                 rel="noopener" target="_self"
                                 aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="help.html"
+                            <a href="help.html"
                                 rel="noopener" target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
