--- a/response.html
+++ b/response.html
@@ -32,23 +32,23 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="nav-item" href="index.html" rel="noopener" target="_self"
+                            <a href="index.html" rel="noopener" target="_self"
                                 aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="basics.html" rel="noopener"
+                            <a href="basics.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="materials.html" rel="noopener"
+                            <a href="materials.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="models.html" rel="noopener"
+                            <a href="models.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
-                            <a class="nav-item" href="help.html" rel="noopener"
+                            <a href="help.html" rel="noopener"
                                 target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
